[package]
name = "windows-monitor-functions"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "generate-import-lib"] }
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_HiDpi", "Win32_System_LibraryLoader"] }
dpi = "0.1.1"
tracing = "0.1.40"
